--- a/src/assets/css/base.less
+++ b/src/assets/css/base.less
@@ -6,3 +6,12 @@ html,
   width: 100%;
   height: 100%;
 }
+
+.common-Piece {
+  background-color: #fff;
+  padding: 20px;
+  box-sizing: border-box;
+  box-shadow: 0 0 10px rgb(194, 194, 194);
+  overflow: hidden;
+  border-radius: 5px;
+}
