--- a/src/assets/css/base.less
+++ b/src/assets/css/base.less
@@ -7,7 +7,7 @@ html,
   height: 100%;
 }
 
-.common-Piece {
+.common-piece {
   background-color: #fff;
   padding: 20px;
   box-sizing: border-box;
